--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ol>
         <li>
             <a href="/dance-floor.html">Dance floor</a>
+            <a href="/coordinates.html">Coordinates<a/>
         </li>
     </ol>
 
