tag<li> is used

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <ol>
-        <li>
+        <li class = A>
             <a href="/dance-floor.html">Dance floor</a>
-            <a href="/coordinates.html">Coordinates<a/>
         </li>
+        <li><a href="/coordinates.html">Coordinates<a/></li>
     </ol>
 
     <script>
